@@ -9,6 +9,10 @@ import java.io.File;
 import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 
 import static org.example.Leagues.LambdaFunctions.findLeagueWithHighestId;
 import static org.example.Staffers.LambdaFunctions.filterStaffByType;
@@ -22,17 +26,22 @@ public class Main {
         NbaTeam nbaTeam = new NbaTeam("Brazillian Angels", Conference.NORTH, 1);
         NflTeam nflTeam = new NflTeam("Brazillian Devils", Conference.SOUTH, 2);
         Player Neymar = new Player(11, "Brazil", "Forward");
+
         ArrayList<League> leagues = new ArrayList<>();
         leagues.add(nba);
         leagues.add(nfl);
+
         ArrayList<Team> teams = new ArrayList<>();
         teams.add(nbaTeam);
         teams.add(nflTeam);
+
         ArrayList<Player> players = new ArrayList<>();
         players.add(Neymar);
+
         ArrayList<Staff> staffers = new ArrayList<>();
         Coach headCoach = new Coach(1, "Bill Belichick", 72);
         staffers.add(headCoach);
+
         StaffMoves staffMoves = new StaffMoves(); //correct
         StaffMoves.hireStaff();
         Coordinator coordinator = new Coordinator(2, "Defensive coordinator", "Jerod Mayo", 38);
@@ -41,13 +50,17 @@ public class Main {
         Worker worker = new Worker(100, "Cleaning");
         staffers.add(worker);
         StaffMoves.hireStaff();
+
         //polymorfism with the abstract class Staff
         Staff staffer = new Worker(101, "Cashier");
+        staffers.add(staffer);
+        Staff staffer102 = new Worker(102, "Cashier");
         staffers.add(staffer);
         StaffMoves.hireStaff();
         Staff staffer2 = new Coach(2, "Mike Vrabel", 51);
         staffers.add(staffer2);
         StaffMoves.hireStaff();
+
         //Lambda Functions
         Optional<League> largestLeague = findLeagueWithHighestId(leagues);
 
@@ -56,11 +69,11 @@ public class Main {
 
         List<Coach> coaches = filterStaffByType(staffers, Coach.class);
         coaches.forEach(System.out::println);
-        //
+
         //methods toString,hashCode and equals
         System.out.println(staffer2.toString());
         System.out.println(staffer.hashCode());
-        System.out.println(staffer2.equals(staffer));//implement the method in Staffer class
+        System.out.println(staffer.equals(staffer102));//implement the method in Staffer class
         headCoach.submitReport();
         headCoach.attendTraining();
         headCoach.takeBreak();
@@ -93,12 +106,11 @@ public class Main {
 
         List<Team> southConferenceTeams = teams.stream()
                 .filter(team -> team.getConference() == Conference.SOUTH)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("Times do Conference SOUTH: " + southConferenceTeams);
 
         Set<String> uniquePlayerCountries = players.stream()
                 .map(Player::getNationality)
-                .distinct()
                 .collect(Collectors.toSet());
         System.out.println("Países únicos dos jogadores: " + uniquePlayerCountries);
 
@@ -110,6 +122,7 @@ public class Main {
         });
         //
 
+        //t
         //Try-catch use
         try {
             for (Staff i : staffers) {
@@ -150,6 +163,45 @@ public class Main {
             FileUtils.writeStringToFile(outputFile, "Unique word count: " + uniqueWords.size());
         }catch (IOException e){
             System.out.println("Read error.");
+        }
+
+        Class<?> clazz = Player.class;
+        System.out.println("Fields");
+        Field[] field = clazz.getDeclaredFields();
+        for (Field campo : field) {
+            int modifiers = campo.getModifiers();
+            System.out.println("Modifier: " + Modifier.toString(modifiers) + ", field: " + campo.getName() + ", Type: " + campo.getType());
+        }
+
+        System.out.println("\nConstructors:");
+        Constructor<?>[] constructors = clazz.getDeclaredConstructors();
+        for (Constructor<?> constructor : constructors) {
+            System.out.println("Constructor: " + constructor.getName() + ", parameters: " + constructor.getParameterCount());
+            Class<?>[] typesOfParameters = constructor.getParameterTypes();
+            for (Class<?> type : typesOfParameters) {
+                System.out.println("Type of parameter: " + type.getName());
+            }
+        }
+
+        System.out.println("\nMethods:");
+        Method[] methods = clazz.getDeclaredMethods();
+        for (Method met : methods) {
+            int modificadores = met.getModifiers();
+            System.out.println("Modificador: " + Modifier.toString(modificadores) + ", Método: " + met.getName() + ", Tipo de retorno: " + met.getReturnType());
+            Class<?>[] typesOfParameters = met.getParameterTypes();
+            for (Class<?> type : typesOfParameters) {
+                System.out.println("Tipo de parâmetro: " + type.getName());
+            }
+        }
+
+        try{
+            Constructor<?> constructor = clazz.getDeclaredConstructor(int.class,String.class,String.class);
+            Object myObject = constructor.newInstance(11,"Brazillian","Forward");
+
+            Method method = clazz.getDeclaredMethod("getNationality");
+            method.invoke(myObject);
+        }catch(Exception e){
+            System.out.println("Error");
         }
     }
 }
